--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@ Just demand ang get them under 8 ,hours</h4></div></center>
 		<center><a href="http://demand8.github.io/about.html">
 		<img src="http://sign-design-software.rapidsoftsystems.com/images/aboutUs.png"
 		    class="img-rounded" width="40%"></a></center><br/>
-		    		<center><div class="aaaa" style="width : 40%"><h6>social icons</h6><br/>
+		    		<center><div class="aaaa" style="width : 40%"><h6>we are social animal</h6><br/>
 		    		<a><img src="http://www.stickpng.com/assets/images/58e91965eb97430e819064f5.png"
 		    		width="30%"></a>&nbsp&nbsp<a><img src="https://cdn-images-1.medium.com/max/2000/1*bU-VbtWJZKEGKSNbpj27fg.png"
 		    		width="30%"><a>
@@ -166,17 +166,19 @@ Just demand ang get them under 8 ,hours</h4></div></center>
 
 		
 </div>
-		<div id="side"><center><br/><div class="jumbotron"><center><h2>CONTENTS:</h2><br/><br/><a href="http://demand8.github.io/games.html"><img id="games" src="https://lh3.googleusercontent.com/-Ha8cCQ_JRls/WzInDTJFOAI/AAAAAAAAACQ/n_WAaWxEbkkXaKIGJ4XEMj0s2V2Hn0LRwCL0BGAs/w530-d-h444-n-rw/ge1.png"
+		<div id="side"><center><br/><div class="jumbotron"><center><h2>CONTENTS:</h2><br/><br/><a href="http://demand8.github.io/games.html"><img id="games" src="https://lh3.googleusercontent.com/-tHrdvYQX0SM/W4JxN7p4sTI/AAAAAAAAAIE/gmbukSQp2isdDxGo1Q80fzrTGXT0yYfswCL0BGAs/w530-d-h202-n-rw/20180826_135936_0001.png"
 class="img-rounded" width="60%" align=""></a><br/><br/>
 <a href="https://demand8.github.io/softwares.html">
-	<img id="softwares" src="https://lh3.googleusercontent.com/-8DAsdWoIZa8/WzImkwiTR_I/AAAAAAAAAAw/BOKTcLNCaMMQrl4j-3nELDTGMA1kUmsrACL0BGAs/w530-d-h444-n-rw/20180626_091241_0001.png"
+	<img id="softwares" src="https://lh3.googleusercontent.com/-K5Ixxi0CE08/W4JwKJ1pRII/AAAAAAAAAGI/hCqTOa3ilmk0Ql4SOcKXJgJktCAGuyWVQCL0BGAs/w530-d-h202-n-rw/20180826_135215_0001.png"
 class="img-rounded" width="60%" align=""></a><br/><br/>
-<a href="demand8.github.io/android worx.html"><img id="andwx" src="https://lh3.googleusercontent.com/-fRLK_FKf1Os/WzImqAuUcSI/AAAAAAAAABI/gcl_dqieTeMHvE24yEJvJfE7R8ZWlEPHgCL0BGAs/w530-d-h444-n-rw/ax001.png"
+<a href="demand8.github.io/android worx.html"><img id="andwx" src="https://lh3.googleusercontent.com/--ibcyv1jgBs/W4Icq8ef_eI/AAAAAAAAAF4/9UPcdLt7aWgxBG3M2-yeomJFPAW4CizVQCJoC/w530-h202-n-rw/gplus1890798322.png"
 	class="img-rounded" width="60%"></a><br/><br/>
 <a href="demand8.github.io/others.html">
-	<img id="others" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTULPP2qVkOE8RueQEyWeup8ZN6paFkIxJwmLq5AZrV4zVd-azNpg"
-	     class="img-rounded" width="60%"></div></div>
-		</div></center></div>
+	<img id="others" src="https://lh3.googleusercontent.com/-h9Y8EOr4ZIU/W4JwZNoH9EI/AAAAAAAAAG8/6lJI23xMlbsCg7CsJ8STr8jM0jihIl46gCL0BGAs/w530-d-h202-n-rw/20180826_142620_0001.png"
+	     class="img-rounded" width="60%"><br/><br/>
+	     <a href="https://forum.xda-developers.com/mi-a1/development/rom-xenon-hd-t3780866"
+	     ><h3>We also do android development (for TISSOT/MI a1)</h3></a></div></div>
+		</div><br/><br/>
+		</center></div>
 	</body>
 </html>
-
