--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ Just demand ang get them under 8 ,hours</h4></div></center>
   <div id="demand" class="collapse">
   <form method="POST" action="https://formspree.io/build8yours@gmail.com">
 <div class="form-group">
-      <label for="email">Email:</label>
+      <label for="email">Email:( please check your email some mails from demand8 may be sent to you)</label>
       <input type="email" class="form-control" id="email" placeholder="Enter email" name="email">
     </div> 
    
