--- a/others.html
+++ b/others.html
@@ -40,6 +40,12 @@
 </nav><br/><div class="jumbotron">
       <h2>A Disposable Phone Number</h2><br/>
       <h6>sms receive free</h6>
+      YES! everyone wants to make a fake account or need a phone number in the time of emergency<br>
+<button data-toggle="collapse" data-target="#dspn" class="btn-info btn-xs">more/less</button>
+      <div id="dspn" class="collapse">
+       Here is a website which provides you a temperory disposable phone number of USA and Canada
+      (whatever you want) and you can make accounts from it!
+        </div>
 </div>      </div>
     </body>
   </html>
