--- a/others.html
+++ b/others.html
@@ -47,7 +47,7 @@
         <br/>Temperory disposable phone number of USA and Canada
       (whatever you want) and you can make accounts from it!<br/>
         <img src="https://smsreceivefree.com/images/favicons/favicon-32x32.png"
-             width="40%" class=img-thumbnail"><br/><br/>
+              class=img-thumbnail"><br/><br/>
                                            <a href="https://smsreceivefree.com/">  <button class="btn-success btn-xl">JUMP TO THERE</button></a>
         </div>
 </div>      </div>
