--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 			
 			.jumbotron {
 				width : 80%;
-				border-radius : 8px ;
+				border-radius : 10px ;
 			}
 			
 			.well{
@@ -108,7 +108,7 @@ Just demand ang get them under 8 ,hours</h4></div></center>
 		</div>
 		</center>
 		<hr>
-		<div class="well"><button type="button" class="btn btn-warning btn-block btn-lg" data-toggle="collapse" data-target="#demand"> <h3>...! DEMAND NOW !...</h3></button>
+		<div class="well"><button type="button" class="btn btn-warning btn-block btn-lg" data-toggle="collapse" data-target="#demand" style="border-radius : 50px;"> <h3>...! DEMAND NOW !...</h3></button>
   <div id="demand" class="collapse">
   <form method="POST" action="https://formspree.io/build8yours@gmail.com">
 <div class="form-group">
@@ -136,7 +136,7 @@ Just demand ang get them under 8 ,hours</h4></div></center>
      
     </div>
   </form><br/>
-			<a href="tel:+918789707686" class="button om-trigger-conversion"><button class="btn-success btn-lg">call if any problem occurs</button></a>
+			<a href="tel:+918789707686" class="button om-trigger-conversion"><button class="btn-success btn-lg" style="border-radius : 50px;">call if any problem occurs</button></a>
 </div>
   </div>
 			
