--- a/about.html
+++ b/about.html
@@ -27,12 +27,13 @@ Here you can demand anything and you will the result whithin 8 hours<br/><br/>
 </div>
 <div class="jumbotron">
 <h2>Saksham 7001</h2><br/>
-<h6>Developer</h6></div>
-</div><br/>
- <div class="jumbotron">
+<h6>Developer</h6></div><br/>
+  <div class="jumbotron">
 <h2>3.Devashish Mishra</h2><br/>
 <h6>advertiser</h6></div>
 </div>
+</div><br/>
+
 <div class="well">
  In Demand8 anyone can contribute their development and make this more effective and efficient among the world.<br/></div>
  <div class="jumbotron">website hosted and developed on:<br/><a href=""><img src="https://assets-cdn.github.com/images/modules/logos_page/GitHub-Mark.png"
