--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@ Just demand ang get them under 8 ,hours</h4></div></center>
 		    class="img-rounded" width="40%"></a></center><br/>
 		    		<center><div class="aaaa" style="width : 40%"><h6>we are social animal</h6><br/>
 		    		<a><img src="http://www.stickpng.com/assets/images/58e91965eb97430e819064f5.png"
-		    		width="30%"></a>&nbsp&nbsp<a><img src="https://cdn-images-1.medium.com/max/2000/1*bU-VbtWJZKEGKSNbpj27fg.png"
+		    		width="30%"></a>&nbsp&nbsp<a href="https://t.me/joinchat/H0pWaxB8vELY9-rsAW6zmQ"><img src="https://cdn-images-1.medium.com/max/2000/1*bU-VbtWJZKEGKSNbpj27fg.png"
 		    		width="30%"><a>
 		    		&nbsp&nbsp<a mailto:"build8yours@gmail.com"><img src="https://cdn4.iconfinder.com/data/icons/basic-ui-elements/700/08_mail-512.png"
 		    		width="30%"></a>
