--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   left: 50%;
   top: 50%;
   z-index: 1;
+  width: 150px;
+  height: 150px;
+  margin: -75px 0 0 -75px;
  
 }
 .cssload-container {
