--- a/index.html
+++ b/index.html
@@ -207,8 +207,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 				</div>
 			</div>
 		</div>
-	</div><br/>
-	  ......................
+	</div>
 	  </center>
 </div>
 		<!-- Google Tag Manager (noscript) -->
