--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
 <!-- Latest compiled JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+	
+	<meta name="description" content="Demand any thing(apps,games,softwares,etc.) and get it easily under 8 hours."/>
 </head>
 
 
