--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@ Just demand ang get them under 8 ,hours</h4></div></center>
 		    		width="30%"><a>
 		    		&nbsp&nbsp<a mailto:"build8yours@gmail.com"><img src="https://cdn4.iconfinder.com/data/icons/basic-ui-elements/700/08_mail-512.png"
 		    		width="30%"></a>
-		    		<br><a ><img src="http://jazzservers.net/images/discord.png"
+		    		<br><a href="https://discord.gg/pmAeuWz"><img src="http://jazzservers.net/images/discord.png"
 		    		width="30%"></a>
 		    		&nbsp&nbsp<a href="https://github.com/demand8/demand8.github.io"><img src="http://www.stickpng.com/assets/images/5847f98fcef1014c0b5e48c0.png"
 		    		width="30%"><a>
