--- a/games.html
+++ b/games.html
@@ -38,9 +38,34 @@
     </ul>
     
   </div>
-</nav><br/><div class="jumbotron">
-      <h2></h2><br/>
-      <h6></h6>
-</div>      </div>
+</nav><br/><div class="jumbotron"><img src="https://img.gta5-mods.com/q95/images/hq-gta-san-andreas-loading-music/299ac3-5f42d6-1024x1024bb.jpg" 
+class="img-circle" align="left" width="10%">
+<h3><b>Grand Theft Auto: SanAndreas</b><br/>
+<h6>Rockstar Games</h6><b></h3><br/><br>
+Five years ago Carl Johnson escaped from the pressures of life in Los Santos,<br/>
+ San Andreas... a city tearing itself apart with gang trouble, drugs and corruption. <br/>
+ Where filmstars and millionaires do their best to avoid the dealers and gangbangers. <br/>
+<br/>
+<button data-toggle="collapse" data-target="#san" class="btn-info btn-xs">more/less</button>
+
+<div id="san" class="collapse"><br/>
+ <p>Now, it's the early 90's. 
+ Carl's got to go home. His mother has been murdered,
+  his family has fallen apart and his childhood friends are all heading towards disaster. </p>
+<p>
+On his return to the neighborhood, a couple of corrupt cops frame him for homicide.
+ CJ is forced on a journey that takes him across the entire state of San Andreas, to save his family and to take control of the streets.<br/>
+ and you all know better than us.......</p>
+ </br>
+ <img src="https://images-na.ssl-images-amazon.com/images/I/81LAAtx17EL.png"
+ class="img-thumbnail" align="center" width="30%">&nbsp&nbsp <img src="http://i1.ytimg.com/vi/ZNe1sjQxrSI/maxresdefault.jpg"
+ class="img-thumbnail" align="center" width="30%"><br/>
+ <center><br/><a href="http://download2332.mediafire.com/px7paw472z8g/ayf89u8xj1ydfg2/GTA+Sanandreas+SETUP.rar"><button class="btn-success btn-lg">DOWNLOAD(FOR WINDOWS)</button></a><br/>
+ <a href="https://www.gtainside.com/en/sanandreas/mods/">check out different mods</a>
+ <br/><h6>A demand from:
+	
+omprakash25923368@gmail.com</h6></center><p>
+<a href=""></a></a>
+</div> </div>
     </body>
   </html>
