--- a/index.html
+++ b/index.html
@@ -317,10 +317,10 @@ Just demand ang get them under 8 ,hours</h4></div></center>
      <div class="form-group">
         <label for="section">Select option (select one):</label>
       <select class="form-control" id="section">
-        <option>Games</option>
-        <option>Softwares</option>
-        <option>Android worX</option>
-        <option>others(undefined)</option>
+        <option id="games">Games</option>
+        <option id="softwares">Softwares</option>
+        <option id="andwx">Android worX</option>
+        <option id="others">others(undefined)</option>
       </select>
       <br>
        <button type="submit" class="btn btn-default">Demand!</button>
