--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
 	
 	<title>Demand8</title>
-	<link rel="icon" type="image/png" href="https://lh3.googleusercontent.com/-siJEeFxmu_8/WzImxj6uNXI/AAAAAAAAABo/pbARi2r-mJcsm6DXorUXV1EWoPHXXA9YQCL0BGAs/w530-d-h530-n-rw/demaandi8.png" />
+	<link rel="icon" type="image/png" href="https://github.com/demand8/demand8.github.io/blob/master/LogoMakr_9MQR5P.png?raw=true" />
 	<meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 	
