--- a/TV Shows/tvshows.html
+++ b/TV Shows/tvshows.html
@@ -17,13 +17,13 @@
     
     <h2>Your Favourite TV shows at demand8 !</h2><br/><br/>
       <hr width="60%" />
-      <div class="jumbotron"><br/>
-        <img src="https://i.pinimg.com/564x/36/fc/ea/36fcea1d599d65eb069dadf55a86305e--doctor-stranger-logo.jpg"
-             width="30%" class="img-circle" />
-        <h2>Stranger Things</h2>
+      <div class="jumbotron" style="border-radius:50px;"><br/>
+       <center> <img src="https://i.pinimg.com/564x/36/fc/ea/36fcea1d599d65eb069dadf55a86305e--doctor-stranger-logo.jpg"
+             width="20%" class="img-circle" />
+        <h1>Stranger Things</h1>
         <h6>Netflix</h6>
         
-        </div>
+        </center></div>
    </div>
     </body>
   </html>
