--- a/android worx.html
+++ b/android worx.html
@@ -8,7 +8,7 @@
   });
 </script>
     <title>Android WorX</title>
-    <link rel="icon" type="image/png" href="https://lh3.googleusercontent.com/-siJEeFxmu_8/WzImxj6uNXI/AAAAAAAAABo/pbARi2r-mJcsm6DXorUXV1EWoPHXXA9YQCL0BGAs/w530-d-h530-n-rw/demaandi8.png" />
+    <link rel="icon" type="image/png" href="https://mbtskoudsalg.com/images/android-logo-png-transparent-background-8.png" />
     <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
