--- a/donate.html
+++ b/donate.html
@@ -15,18 +15,22 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body>
-<div class="container">
+<div class="container"><br/><br/>
 <div class="well"><center>
 <h2>Donate Us</h2><br/>
+	donate us for more develoment.
 <h5>via PAYTM</h5><br/><br/>
-<p>
-scan the QR code:
-</p><br/>
+
 <br/>
 <img src="https://i.imgur.com/WzHByKd.jpg" 
-class="img-rounded" width="40%" />
+class="img-rounded" width="50%" style="border-radius : 50px ;" /><br/>
+	<a href="http://demand8.github.io">Back Home</a>
 </center>
-</div>
+</div><br/><br/><div class=jumbotron><br/><h3>List of Donors</h3>
+	<ul>
+		<li></li>
+		</ul>
+	</div>
 </div>
 </body>
 </html>
