--- a/index.html
+++ b/index.html
@@ -386,6 +386,8 @@ class="img-rounded" width="60%" align="" style="border-radius : 50px;"></a><br/>
 <a href="demand8.github.io/others.html">
 	<img id="others" src="https://lh3.googleusercontent.com/-h9Y8EOr4ZIU/W4JwZNoH9EI/AAAAAAAAAG8/6lJI23xMlbsCg7CsJ8STr8jM0jihIl46gCL0BGAs/w530-d-h202-n-rw/20180826_142620_0001.png"
 	     class="img-rounded" width="60%" style="border-radius : 50px;"><br/><br/>
+	 <a href="http://demand8.github.io/Books/books1.html"
+	     ><h3>Watch out some helpful Books</h3></a><br/><br/>
 	     <a href="https://forum.xda-developers.com/mi-a1/development/rom-xenon-hd-t3780866"
 	     ><h3>We also do android development (for TISSOT/MI a1)</h3></a></div></div>
 		</div><br/><br/>
