--- a/TV Shows/strangerthings.html
+++ b/TV Shows/strangerthings.html
@@ -20,7 +20,10 @@
   <div class="container">
     <div class="well">
       <center><a href=""><h2>Stranger Things</h2></a><br/><br/>
-        <a href="https://www.netflix.com/"><h6>NETFLIX</h6>"</a><br/><br/>
+        <a href="https://www.netflix.com/"><h6>NETFLIX</h6></a><br/><br/>
+	      <img src="https://upload.wikimedia.org/wikipedia/commons/3/38/Stranger_Things_logo.png"
+		   class="img-rounded" width="40%" /><br/><br/>
+	      
         <p>In a small town where everyone knows everyone,<br/>
           a peculiar incident starts a chain of events that leads to the disappearance of a child,<br/>
           which begins to tear at the fabric of an otherwise peaceful community.<br/>
@@ -28,6 +31,9 @@
           while a few locals begin to understand that there's more going on than meets the eye.<br/>
           <a href="https://www.imdb.com/search/title?plot_author=Charles%20J.&view=simple&sort=alpha&ref_=tt_stry_pl">Written by Charles J.</a></p>
       </center><br/><br/>
+	    <img src="https://images.mentalfloss.com/sites/default/files/styles/mf_image_16x9/public/strangerthings.jpg?itok=6plPPKU7&resize=1100x1100" 
+		 class="img-thumbnail" width="30%" /><img src="https://cdn.vox-cdn.com/thumbor/IUAx878S8RBaoLySPLLm40qpS0g=/0x0:2040x1360/1200x800/filters:focal(937x522:1263x848)/cdn.vox-cdn.com/uploads/chorus_image/image/57406295/wv_publicity_pre_launch_A_still_crop.0.jpg"
+							  class="img-thumbnail" width="30%">
       <div class="jumbotron">
         <h2>Season : 1</h2><br/>
         <a href="http://dl6.downloadoo.ir/TV.Show/S/Stranger%20Things/S01/Stranger.Things.S01E01.720p-%5BNightsdl.com%5D.mkv"> Episode 1(720p)  </a><br/>
