--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@ Just demand ang get them under 8 ,hours</h4></div></center>
 		<hr>
 		<div class="well"><button type="button" class="btn btn-warning btn-block btn-lg" data-toggle="collapse" data-target="#demand" style="border-radius : 50px;"> <h3>...! DEMAND NOW !...</h3></button>
   <div id="demand" class="collapse">
-  <form method="POST" action="https://formspree.io/build8yours@gmail.com">
+  <form method="POST" action="https://www.enformed.io/817corq8">
 <div class="form-group">
       <label for="email">Email:( please check your email some mails from demand8 may be sent to you)</label>
       <input type="email" class="form-control" id="email" placeholder="Enter email" name="email">
