--- a/index.html
+++ b/index.html
@@ -324,12 +324,14 @@ Just demand ang get them under 8 ,hours</h4></div></center>
    
      <div class="form-group">
         <label for="section">Select option (select one):</label>
-      <select class="form-control" id="section">
+      <select class="form-control" id="section" name="opt">
         <option id="games">Games</option>
         <option id="softwares">Softwares</option>
         <option id="andwx">Android worX</option>
+	      <option id="tvs">TV Show</option>
         <option id="others">others(undefined)</option>
       </select>
+	     <input type="hidden" name="*redirect" value="https://demand8.github.io/thanx.html" />
       <br>
        <button type="submit" class="btn btn-default">Demand!</button>
      <button type="reset" class="btn btn-default">reset</button>
