--- a/index.html
+++ b/index.html
@@ -324,8 +324,9 @@ Just demand ang get them under 8 ,hours</h4></div></center>
    
      <div class="form-group">
         <label for="section">Select option (select one):</label>
-      <select class="form-control" id="section" name="opt">
-        <option id="games">Games</option>
+      <select class="form-control" id="section" name="opt" placeholder="SELECT">
+        
+	      <option id="games">Games</option>
         <option id="softwares">Softwares</option>
         <option id="andwx">Android worX</option>
 	      <option id="tvs">TV Show</option>
