--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@ Here you can demand anything and you will the result whithin 8 hours<br/><br/>
 <h2>Minds & Hands Behind This</h2><br/>
 <div class="jumbotron">
 <h2>1.Om Vardhan Singh</h2><br/>
-<h6>producer</h6></div>
+<h6>Manager</h6></div>
 </div>
 <div class="jumbotron">
 <h2>Saksham 7001</h2><br/>
@@ -36,9 +36,9 @@ Here you can demand anything and you will the result whithin 8 hours<br/><br/>
 
 <div class="well">
  In Demand8 anyone can contribute their development and make this more effective and efficient among the world.<br/></div>
- <div class="jumbotron">website hosted and developed on:<br/><a href=""><img src="https://assets-cdn.github.com/images/modules/logos_page/GitHub-Mark.png"
+ <div class="jumbotron">website hosted and developed on:<br/><a href="https://github.com/demand8/demand8.github.io"><img src="https://assets-cdn.github.com/images/modules/logos_page/GitHub-Mark.png"
  class="img-circle" align="center" width="30%"></a><br/>
- <h5>Give your contributions <sup>in contributors branch</sup></h5>
+ <h5>Give your contributions <sup></sup></h5>
 </div>
 </div>
 </body>
