--- a/about.html
+++ b/about.html
@@ -19,12 +19,12 @@ Here you can demand anything and you will the result whithin 8 hours<br/><br/>
  And is being developing by Saksham 7001<br/>
  </h3>
 </center>
-<div class="well">
+<
 <h2>Minds & Hands Behind This</h2><br/>
 <div class="jumbotron">
 <h2>1.Om Vardhan Singh</h2><br/>
 <h6>Manager</h6></div>
-</div>
+
 <div class="jumbotron">
 <h2>Saksham 7001</h2><br/>
 <h6>Developer</h6></div><br/>
@@ -35,11 +35,12 @@ Here you can demand anything and you will the result whithin 8 hours<br/><br/>
 </div><br/>
 
 <div class="well">
+ <center>
  In Demand8 anyone can contribute their development and make this more effective and efficient among the world.<br/></div>
- <div class="jumbotron">website hosted and developed on:<br/><a href="https://github.com/demand8/demand8.github.io"><img src="https://assets-cdn.github.com/images/modules/logos_page/GitHub-Mark.png"
+ <div class="jumbotron"><p>Website developed on:</p><br/><a href="https://github.com/demand8/demand8.github.io"><img src="https://assets-cdn.github.com/images/modules/logos_page/GitHub-Mark.png"
  class="img-circle" align="center" width="30%"></a><br/>
  <h5>Give your contributions </h5>
 </div>
-</div>
+</center></div>
 </body>
 </html>
