--- a/games.html
+++ b/games.html
@@ -38,7 +38,28 @@
     </ul>
     
   </div>
-</nav><br/><div class="jumbotron"><img src="https://img.gta5-mods.com/q95/images/hq-gta-san-andreas-loading-music/299ac3-5f42d6-1024x1024bb.jpg" 
+</nav><br/>
+<br/><div class="jumbotron"><img src="" 
+class="img-circle" align="left" width="10%">
+<h3><b></b><br/>
+<h6></h6><b></h3><br/><br>
+<br/>
+<br/>
+<button data-toggle="collapse" data-target="#igit" class="btn-info btn-xs">more/less</button>
+
+<div id="igit" class="collapse"><br/></p>
+ </br>
+ <img src=""
+ class="img-thumbnail" align="center" width="30%">&nbsp&nbsp <img src=""
+ class="img-thumbnail" align="center" width="30%"><br/>
+ <center><br/><a r"><button class="btn-success btn-lg">DOWNLOAD(FOR WINDOWS)</button></a><br/>
+ <br/><h6>A demand from:
+	
+</h6></center><p>
+<a href=""></a></a>
+</div> </div>
+
+<div class="jumbotron"><img src="https://img.gta5-mods.com/q95/images/hq-gta-san-andreas-loading-music/299ac3-5f42d6-1024x1024bb.jpg" 
 class="img-circle" align="left" width="10%">
 <h3><b>Grand Theft Auto: SanAndreas</b><br/>
 <h6>Rockstar Games</h6><b></h3><br/><br>
