--- a/games.html
+++ b/games.html
@@ -41,8 +41,8 @@
 </nav><br/>
 <br/><div class="jumbotron"><img src="" 
 class="img-circle" align="left" width="10%">
-<h3><b></b><br/>
-<h6></h6><b></h3><br/><br>
+<h3><b>I.G.I 2-Covert Strike</b><br/>
+<h6>Interloop Studio</h6><b></h3><br/><br>
 <br/>
 <br/>
 <button data-toggle="collapse" data-target="#igit" class="btn-info btn-xs">more/less</button>
