--- a/games.html
+++ b/games.html
@@ -39,7 +39,7 @@
     
   </div>
 </nav><br/>
-<br/><div class="jumbotron"><img src="" 
+<br/><div class="jumbotron"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcR-wmNYY8P3cdbtVgMsgQ8-IEDWXgeUK2g2FI2WzaxXdoDEbS-W " 
 class="img-circle" align="left" width="10%">
 <h3><b>I.G.I 2-Covert Strike</b><br/>
 <h6>Interloop Studio</h6><b></h3><br/><br>
