--- a/games.html
+++ b/games.html
@@ -39,7 +39,7 @@
     
   </div>
 </nav><br/>
-<br/><div class="jumbotron"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcR-wmNYY8P3cdbtVgMsgQ8-IEDWXgeUK2g2FI2WzaxXdoDEbS-W " 
+<br/><div class="jumbotron"><img src="" 
 class="img-circle" align="left" width="10%">
 <h3><b>I.G.I 2-Covert Strike</b><br/>
 <h6>Interloop Studio</h6><b></h3><br/><br>
@@ -52,10 +52,11 @@ class="img-circle" align="left" width="10%">
  <img src=""
  class="img-thumbnail" align="center" width="30%">&nbsp&nbsp <img src=""
  class="img-thumbnail" align="center" width="30%"><br/>
- <center><br/><a r"><button class="btn-success btn-lg">DOWNLOAD(FOR WINDOWS)</button></a><br/>
+ <center><br/><a href="http://download2.nust.na/pub4/sourceforge/a/ah/ahmedateeqzia/games/Project%20IGI%202%20setup.exe"><button class="btn-success btn-lg">DOWNLOAD(FOR WINDOWS)</button></a><br/>
  <br/><h6>A demand from:
 	
 </h6></center><p>
+Avnish
 <a href=""></a></a>
 </div> </div>
 
