--- a/index.html
+++ b/index.html
@@ -310,7 +310,8 @@ Just demand ang get them under 8 ,hours</h4></div></center>
 		<div class="well"><button type="button" class="btn btn-warning btn-block btn-lg" data-toggle="collapse" data-target="#demand" style="border-radius : 50px;"> <h3>...! DEMAND NOW !...</h3></button>
   <div id="demand" class="collapse">
   <form method="POST" action="https://www.enformed.io/817corq8">
-<div class="form-group">
+<div class="form-group"><br/>
+	<h3>DEMANDING WILL BE AVAILABLE FROM 31<sup>st</sup>DEC,2018.</h3>
       <label for="email">Email:( please check your email some mails from demand8 may be sent to you)</label>
       <input type="email" class="form-control" id="email" placeholder="Enter email" name="email">
     </div> 
