--- a/about.html
+++ b/about.html
@@ -12,7 +12,58 @@
 </head>
 <body>
 <div class="container"><center>
-
+<h2>Hands and minds behind </h2><br/>
+  <h4>developed on:</h4><br>
+  <a href="http://github.com"><img src="http://www.stickpng.com/assets/images/5847f98fcef1014c0b5e48c0.png"
+                                   class="img-circle" width="30%"></a><br/>
+  
+  <hr width="90%" />
+  <div class="well">
+    <div class="jumbotron">
+      <h2>Saksham Savarna</h2><br/>
+      <h6>Developer</h6><br/>
+      <a href="mailto:a2258319@gmail.com">
+      <img src="https://cdn.pixabay.com/photo/2016/01/26/17/15/gmail-1162901_960_720.png"
+           class="img-circle" width="20%">&nbsp&nbsp<a href="https://www.facebook.com/saksham.savarna.9?ref=br_rs">
+        <img src="https://upload.wikimedia.org/wikipedia/en/thumb/8/8c/Facebook_Home_logo_old.svg/1024px-Facebook_Home_logo_old.svg.png"
+             class="img-circle" width="30%">&nbsp&nbsp<a href="tel:+91 8789707686">
+        <img src="https://lh3.googleusercontent.com/sYW1ixie59EUbDDmpt2YN1RIgpGM-ZRz2LRTt2YhEagIbumAqlPlOEFy349d1K5ERg=s180"
+             class="img-circle" width="30%">
+        </a>
+        </a>
+      </a>
+      </div><br/><br/>
+     <div class="jumbotron">
+      <h2>Om Vardhan Singh</h2><br/>
+      <h6>Manager</h6><br/>
+      <a href="mailto:omvardhan233@gmail.com">
+      <img src="https://cdn.pixabay.com/photo/2016/01/26/17/15/gmail-1162901_960_720.png"
+           class="img-circle" width="20%">&nbsp&nbsp<a href="">
+        <img src="https://upload.wikimedia.org/wikipedia/en/thumb/8/8c/Facebook_Home_logo_old.svg/1024px-Facebook_Home_logo_old.svg.png"
+             class="img-circle" width="30%">&nbsp&nbsp<a href="tel:">
+        <img src="https://lh3.googleusercontent.com/sYW1ixie59EUbDDmpt2YN1RIgpGM-ZRz2LRTt2YhEagIbumAqlPlOEFy349d1K5ERg=s180"
+             class="img-circle" width="30%">
+        </a>
+        </a>
+      </a>
+      </div>
+    <br/><br/>
+     <div class="jumbotron">
+      <h2>Devashish Mishra</h2><br/>
+      <h6>Advertiser</h6><br/>
+      <a href="">
+      <img src="https://cdn.pixabay.com/photo/2016/01/26/17/15/gmail-1162901_960_720.png"
+           class="img-circle" width="20%">&nbsp&nbsp<a href="">
+        <img src="https://upload.wikimedia.org/wikipedia/en/thumb/8/8c/Facebook_Home_logo_old.svg/1024px-Facebook_Home_logo_old.svg.png"
+             class="img-circle" width="30%">&nbsp&nbsp<a href="tel:">
+        <img src="https://lh3.googleusercontent.com/sYW1ixie59EUbDDmpt2YN1RIgpGM-ZRz2LRTt2YhEagIbumAqlPlOEFy349d1K5ERg=s180"
+             class="img-circle" width="30%">
+        </a>
+        </a>
+      </a>
+      </div>
+    </div>
+  
 </center></div>
 </body>
 </html>
