--- a/thanx.html
+++ b/thanx.html
@@ -1,19 +1,26 @@
 <html>
 <title>thank you </title>
 
-<style>
-.tkx {
-width : 60% ;
-background : yellow ;
-}
-</style>
+<link rel="icon" type="image/png" href="https://img.freepik.com/free-vector/thank-you-lettering_1262-6963.jpg?size=338&ext=jpg" />
+	<meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+	
+	<!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+
+<!-- jQuery library -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
+<!-- Latest compiled JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <body>
 <center>
-<div class="thx">
+<div class="jumbotron">
 <center>
-<h2>Thank You</h2>
+<img src = "https://media.giphy.com/media/3o6vXURvyF7bmW1HGg/source.gif"
+     width = "40%">
 <h4>your<b> Demand </b> was submitted successfully</h4><br/>
-<h4>please check your email(we can send you mails for your demand)</h4>
+<h4>please check your email(any mail from our side can be sent to you)</h4>
 </center>
 </div>
 </center>
