--- a/thanx.html
+++ b/thanx.html
@@ -15,6 +15,7 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <body>
 <center>
+	<div class="container">
 <div class="jumbotron">
 <center>
 <img src = "https://media.giphy.com/media/3o6vXURvyF7bmW1HGg/source.gif"
@@ -23,6 +24,7 @@
 <h4>please check your email(any mail from our side can be sent to you)</h4>
 </center>
 </div>
+	</div>
 </center>
 </body>
 </html>
